--- a/src/style.css
+++ b/src/style.css
@@ -8,9 +8,11 @@ div{
     width: 50%;
     text-align: center;
     border-radius: 25px;
+    line-height: 1px;
 }
 
 input{
+    width: 30%;
     border-radius: 5px;
 }
 
@@ -18,5 +20,6 @@ input{
     border-radius: 5px;
     background-color: rgb(82, 82, 248);
     color: white;
+    width: 30%;
 
 }
