--- a/src/style.css
+++ b/src/style.css
@@ -5,10 +5,10 @@ body{
 div{
     background-color: white;
     margin: auto;
-    width: 50%;
+    width: 80%;
+    height: 70%;
     text-align: center;
-    border-radius: 25px;
-    line-height: 1px;
+    border-radius: 15px;
 }
 
 input{
